--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,7 @@
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" android:id="@+id/layout">
 	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="Camera Demo"
+		android:layout_height="wrap_content" android:text="Front Verify"
 		android:textSize="24sp" />
 
 	<FrameLayout android:id="@+id/preview"
